# key-event-handler

./: .gitignore  CMakeLists.txt  main.cpp
include/: clickable.hpp  define_dll_scope.hpp  enums.hpp  key_press_event.hpp
src/: CMakeLists.txt  clickable.cpp  clickable.hpp  key_press_event.cpp  key_press_event.hpp  key_press_event_builder.cpp  key_press_event_builder.hpp  key_press_watcher.cpp  key_press_watcher.hpp  key_press_watcher_implementation.hpp  windows_key_press_watcher_implementation.cpp  windows_key_press_watcher_implementation.hpp
